Fixed spacing between sections in articles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -807,6 +807,10 @@ section article {
 		font-size: 1.5rem;
 	}
 
+	section article section:not(:last-child) {
+		margin-bottom: 2rem;
+	}
+
 /* Make the accessibility button */
 #accessibility {
 	position: relative;
